--- a/src/main/java/com/ronald/peluqueriacanina/gui/VentanaPrincipal.form
+++ b/src/main/java/com/ronald/peluqueriacanina/gui/VentanaPrincipal.form
@@ -143,7 +143,7 @@
                 <Property name="text" type="java.lang.String" value="Buscar Cliente"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCrearClienteActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarCliente"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSalir">
