--- a/src/main/java/com/ronald/peluqueriacanina/gui/VentanaBuscarCliente.form
+++ b/src/main/java/com/ronald/peluqueriacanina/gui/VentanaBuscarCliente.form
@@ -195,6 +195,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Modificar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnModificarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JComboBox" name="jComboBox1">
               <Properties>
